# plotlab

./: .clang-format  .clang-tidy  .clangd  .gitignore  README.md  geothing.py  imgui.ini  meson.build
examples/: test.plab
include/: app.hpp  directives.hpp  ploteditor.hpp  plotlist.hpp  plotrender.hpp  point.hpp  pointlist.hpp  project.hpp
sender/: pyproject.toml  run.py  test.bbplot  test.bbplot.lzma
sender/sender/: main.py  project.py  simplify.py
src/: app.cpp  directives.cpp  main.cpp  plotlist.cpp  point.cpp  pointlist.cpp  project.cpp
src/editor/: events.cpp  finder.cpp  plot_editor.cpp
src/plotrender/: editor.cpp  plot_editor.cpp  plotrender.cpp  shapes.cpp
